- Add icon HK Absen to version android - Edit api GetUserData to login and GetReportData to attendance/perdate

--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -4,7 +4,7 @@
       <div style="padding: 20px; padding-bottom: 10px; line-height: 140%; color: var(--ion-color-hk-red);">
         <div style="padding-bottom: 10px;">
           <ion-avatar>
-            <img src="../../../assets/images/popover-1.png">
+            <img src="{{ photo }}" class="center">
           </ion-avatar>
         </div>
         <ion-text style="font-size: 18px; font-weight: 700;">{{ txtUserName }}</ion-text><br>
