--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -27,7 +27,7 @@
 
       <ion-row class="ion-align-items-center">
         <ion-col class="signup-col">
-          <ion-button shape="round" expand="block" color='hk-red' (click)="Login()" type="submit">Login
+          <ion-button shape="round" expand="block" color='hk-red' type="submit">Login
           </ion-button>
         </ion-col>
       </ion-row>
