--- a/src/app/components/form-pulang-cepat/form-pulang-cepat.component.html
+++ b/src/app/components/form-pulang-cepat/form-pulang-cepat.component.html
@@ -6,20 +6,16 @@
   <ion-card-content>
     <ion-col>
       <ion-item>
-        <!-- <ion-input type="text" placeholder="Jam Datang" [(ngModel)]="timeArrived" name="timeArrived" required>}</ion-input>
-         -->
-         {{txtTimeRequest}}
+        {{txtTimeRequest}}
       </ion-item>
     </ion-col>
-
 
     <ion-col>
       <ion-item>
-        <ion-input type="text" placeholder="Alasan Pulang Cepat" [(ngModel)]="txtDesc" name="txtDesc" required></ion-input>
+        <ion-input type="text" placeholder="Alasan Pulang Cepat" [(ngModel)]="txtDesc" name="txtDesc" required>
+        </ion-input>
       </ion-item>
     </ion-col>
-
-    
   </ion-card-content>
 
   <ion-row class="ion-align-items-center">
@@ -28,5 +24,5 @@
       </ion-button>
     </ion-col>
   </ion-row>
-  
+
 </ion-card>
