--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -28,7 +28,7 @@
           <ion-text>Settings and Privacy</ion-text>
         </ion-item>
         <ion-item button mode="md" Lines="none" color="hk-white-red" style="--min-height: 55px;"
-          href="http://www.hutamakarya.com/id/">
+          href="https://servicedesk.hutamakarya.com/">
           <ion-text>Help Center</ion-text>
         </ion-item>
       </ion-menu-toggle>
