--- a/src/app/components/report-daily2/report-daily2.component.html
+++ b/src/app/components/report-daily2/report-daily2.component.html
@@ -1,5 +1,17 @@
 <hr width="90%">
 
+<!-- <ion-item Lines="none">
+  <ion-label>Total Hadir : {{txtTotalHadir}} 20 Hari</ion-label>
+</ion-item> -->
+
+<ion-card>
+  <ion-item Lines="none" color="transparent">
+    <ion-label>Total Hadir : {{txtTotalHadir}} 20 Hari</ion-label>
+  </ion-item>
+</ion-card>
+
+<hr width="90%">
+
 <ion-grid style="width: 90%" no-padding>
   <ion-row no-padding align-items-center>
     <ion-col size="2" no-padding style="text-align: left">
@@ -15,7 +27,7 @@
   </ion-row>
 </ion-grid>
 
-<hr width="90%">
+<!-- <hr width="90%">
 
 <ion-card *ngFor="let requestData of requestDatas">
   <ion-item lines="none" color="transparent">
@@ -38,4 +50,4 @@
         src="{{ photo }}" class="center" /></ion-text>
     <ion-text *ngIf="requestData.szactivityid == 'AC005'">Total : {{ requestData.dectotal }} </ion-text>
   </div>
-</ion-card>
+</ion-card> -->
