--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,12 +7,12 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding scroll-y=false>
+<ion-content padding scroll-y=false class="content">
   <ion-refresher slot="fixed" pullFactor="0.5" pullMin="100" pullMax="200" (ionRefresh)="DoRefresh($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
-    
-  <ion-text style="font-size: 14px">Status: </ion-text>
+
+  <ion-text style="font-size: 14px;">Status: </ion-text>
   <ion-text style="font-size: 14px ;" color="{{colorStatus}}">{{ txtWorkStatus }}</ion-text>
   <!--<p>Example just hit <a target="_blank" rel="noopener" href="http://www.hutamakarya.com/id/">hutama karya</a>
     text.
@@ -25,21 +25,27 @@
 </ion-content>
 
 <ion-footer>
-  <ion-grid>
-    <ion-row>
-      <ion-col class="ion-float-left" size="8" style="background: transparent">
-        <ion-text>Datang : {{txtTimeArrived}}</ion-text>
-        <br>
-        <ion-text>Pulang : {{txtTimeReturn}}</ion-text>
-      </ion-col>
-      <ion-col class="ion-float-right" size="4" style="background: transparent">
-        <ion-text (click)="NavigateToReportPage(0)">Detail </ion-text>
-        <ion-icon name="arrow-forward" mode="ios" style="font-size: 14px; vertical-align: middle"></ion-icon>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <!-- <div padding>
+    <ion-text style="font-size: 14px">Status : </ion-text>
+    <ion-text style="font-size: 14px ;" color="{{colorStatus}}">{{ txtWorkStatus }}</ion-text>
+  </div> -->
 
-  <!-- <ion-chip class="ontime">
+  <div class="footer-content">
+    <ion-grid>
+      <ion-row>
+        <ion-col class="ion-float-left" size="8" style="background: transparent">
+          <ion-text>Datang : {{txtTimeArrived}}</ion-text>
+          <br>
+          <ion-text>Pulang : {{txtTimeReturn}}</ion-text>
+        </ion-col>
+        <ion-col class="ion-float-right" size="4" style="background: transparent">
+          <ion-text (click)="NavigateToReportPage(0)">Detail </ion-text>
+          <ion-icon name="arrow-forward" mode="ios" style="font-size: 14px; vertical-align: middle"></ion-icon>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <!-- <ion-chip class="ontime">
     <ion-label color="light">On Time</ion-label>
   </ion-chip>
 
@@ -51,5 +57,6 @@
     <ion-label color="light">Absen Diluar Kantor</ion-label>
   </ion-chip> -->
 
-  <ion-button expand="block" shape="round" color="hk-red" (click)="ButtonAbsen()">ABSEN</ion-button>
+    <ion-button expand="block" shape="round" color="hk-red" (click)="ButtonAbsen()">ABSEN</ion-button>
+  </div>
 </ion-footer>
