- home - leaderboards - password - settings

--- a/src/app/components/report-daily2/report-daily2.component.html
+++ b/src/app/components/report-daily2/report-daily2.component.html
@@ -4,13 +4,13 @@
   <ion-label>Total Hadir : {{txtTotalHadir}} 20 Hari</ion-label>
 </ion-item> -->
 
-<ion-card>
+<!-- <ion-card>
   <ion-item Lines="none" color="transparent">
     <ion-label>Total Hadir : {{txtTotalHadir}} 20 Hari</ion-label>
   </ion-item>
 </ion-card>
 
-<hr width="90%">
+<hr width="90%"> -->
 
 <ion-grid style="width: 90%" no-padding>
   <ion-row no-padding align-items-center>
