--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -57,7 +57,7 @@
     no-padding>
   <hr style="height: 0.5px; background-color: #cecece; margin-top: 0px; margin-bottom: 0px;" no-padding>
 
-  <ion-item Lines="full">
+  <ion-item button (click)="Logout()" Lines="full">
     <ion-label class="ion-text-center" color="hk-red">Log out</ion-label>
   </ion-item>
 </ion-content>
