--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -3,8 +3,8 @@
     <ion-slide>
       <ion-row>
         <div class="text" padding>
-          <h2>Hutama Karya Absen Management System</h2>
-          <p>Mobile absensi</p>
+          <h2>HK ABSEN</h2>
+          <p>Hutama Karya Presence System</p>
         </div>
       </ion-row>
     </ion-slide>
@@ -12,8 +12,17 @@
     <ion-slide>
       <ion-row>
         <div class="text" padding>
+          <h2>Gamification</h2>
+          <p>Jadilah top 10 karyawan yang melakukan absensi paling awal dan dapatkan hadiahnya </p>
+        </div>
+    </ion-row>
+    </ion-slide>
+
+    <ion-slide>
+      <ion-row>
+        <div class="text" padding>
           <h2>Integrated</h2>
-          <p>Sistem absen ini terhubung dengan perangkat absensi di masing-masing divisi</p>
+          <p>Absen dengan device apa saja, karena sistem telah terintegrasi dengan CCTV, Kiosk dan SAP HITS kamu loh</p>
         </div>
     </ion-row>
     </ion-slide>
@@ -21,17 +30,8 @@
     <ion-slide>
       <ion-row>
         <div class="text" padding>
-          <h2>Powerful</h2>
-          <p>Memiliki fitur untuk dapat absen diluar kantor, izin terlambat, pulang cepat, serta pencatatan lembur</p>
-        </div>
-    </ion-row>
-    </ion-slide>
-
-    <ion-slide>
-      <ion-row>
-        <div class="text" padding>
-          <h2>Get Started</h2>
-          <p>Biar digaji</p>
+          <h2>Let's Start</h2>
+          <p>Yuk, mulai bekerja pada waktunya!</p>
           
           <ion-row class="ion-justify-content-center">
               <ion-button  class="button" expand='full' color='hk-purple' shape='round' (click)='navigateToLoginPage()'>Continue <ion-icon name="arrow-forward"></ion-icon>
