--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,6 +35,14 @@
   --ion-color-hk-white-red-shade: #fce7e7;
   --ion-color-hk-white-red-tint: #ffffff;
 
+  /** hk-white-black **/
+  --ion-color-hk-white-black: #ffffff;
+  --ion-color-hk-white-black-rgb: 255, 255, 255;
+  --ion-color-hk-white-black-contrast: #000000;
+  --ion-color-hk-white-black-contrast-rgb: 234, 34, 39;
+  --ion-color-hk-white-black-shade: #dfdfdf;
+  --ion-color-hk-white-black-tint: #ffffff;
+
   /** hk-white-purple **/
   --ion-color-hk-white-purple: #ffffff;
   --ion-color-hk-white-purple-rgb: 255, 255, 255;
@@ -348,6 +356,15 @@ ion-alert {
   --ion-color-contrast-rgb: var(--ion-color-hk-white-purple-contrast-rgb);
   --ion-color-shade: var(--ion-color-hk-white-purple-shade);
   --ion-color-tint: var(--ion-color-hk-white-purple-tint);
+}
+
+.ion-color-hk-white-black {
+  --ion-color-base: var(--ion-color-hk-white-black);
+  --ion-color-base-rgb: var(--ion-color-hk-white-black-rgb);
+  --ion-color-contrast: var(--ion-color-hk-white-black-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-hk-white-black-contrast-rgb);
+  --ion-color-shade: var(--ion-color-hk-white-black-shade);
+  --ion-color-tint: var(--ion-color-hk-white-black-tint);
 }
 
 .ion-color-hk-white-red {
