--- a/src/app/components/password/password.component.html
+++ b/src/app/components/password/password.component.html
@@ -13,7 +13,7 @@
 <ion-content color="hk-tweet">
   <ion-item Lines="full">
     <ion-label>Current password</ion-label>
-    <ion-input></ion-input>
+    <ion-input (ionChange)="OnChangeCurrentPassword()" [(ngModel)]="currentPassword" name="currentPassword"></ion-input>
   </ion-item>
 
   <hr style="height: 12px; background-color: var(--ion-color-hk-tweet); margin-top: 0px; margin-bottom: 0px;"
@@ -22,11 +22,11 @@
 
   <ion-item Lines="inset">
     <ion-label>New password</ion-label>
-    <ion-input></ion-input>
+    <ion-input (ionChange)="OnChangeNewPassword()" [(ngModel)]="newPassword" name="newPassword"></ion-input>
   </ion-item>
 
   <ion-item Lines="full">
     <ion-label>Confirm password</ion-label>
-    <ion-input></ion-input>
+    <ion-input (ionChange)="OnConfirmNewPassword()" [(ngModel)]="confirmPassword" name="confirmPassword"></ion-input>
   </ion-item>
 </ion-content>
