--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,18 +1,26 @@
-// .content {
-//   --background: none;
-//   background-image: url("../../assets/images/bg-5.png");
-//   background-position: center top;
-//   background-repeat: no-repeat;
-//   background-size: 100%;
-// }
+.backgroundFull {
+  --background: none;
+  background-image: url("../../assets/images/img-1.png");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.content {
+  --background: none;
+  background-image: url("../../assets/images/bg-8.png");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
 
 .footer-content {
   color: #000000;
-  background-color: #f0f0f0;
+  background-color: #ffffff;
   padding-bottom: 5px;
-  padding-top: 20px;
-  padding-left: 18px;
-  padding-right: 18px;
+  padding-top: 0px;
+  padding-left: 5px;
+  padding-right: 5px;
 
   .ion-float-right {
     text-align: right;
@@ -21,6 +29,10 @@
 
   .ion-float-left {
     font-size: 14px;
+  }
+
+  .active-item {
+    border-left: 8px solid var(--ion-color-hk-red);
   }
 
   // ion-button {
@@ -47,17 +59,12 @@
 }
 
 ion-content {
+  --background: #f0f0f0;
+
   .workStatus {
     font-size: 14px;
     color: var(--ion-color-hk-green);
   }
-
-  // .bottom {
-  //   position: absolute;
-  //   bottom: 80px;
-  //   left: 0px;
-  //   right: 0px;
-  // }
 
   .ion-justify-content-center {
     // background: #a85858;
@@ -69,14 +76,45 @@ ion-content {
     // grid-auto-rows: 330%;
     height: 100%;
   }
+
+  ion-card {
+    --background: #ffffff;
+    box-shadow: none;
+    border-radius: 20px;
+  }
 }
 
 ion-card {
-  --background: #f0f0f0;
+  --background: #ffffff;
   box-shadow: none;
-  border-radius: 20px;
 }
 
 .ios ion-card {
-  margin-bottom: 15px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+// ion-card {
+//   position: relative;
+//   text-align: center;
+// }
+
+.card-title {
+  position: absolute;
+  bottom: 0%;
+  // font-size: 2.0em;
+  width: 100%;
+  font-weight: bold;
+  color: #000000;
+}
+
+.card-subtitle {
+  font-size: 1.0em;
+  position: absolute;
+  top: 0%;
+  // right: 50%;
+  // left: 70%;
+  width: 100%;
+  font-weight: bold;
+  color: #000000;
 }
