- Fix password update - Fix home page - Fix leaderboard

--- a/src/app/components/password/password.component.html
+++ b/src/app/components/password/password.component.html
@@ -1,11 +1,15 @@
 <ion-header>
   <ion-toolbar color="hk-red">
-    <ion-buttons slot="start">
+    <!-- <ion-buttons slot="start">
       <ion-button (click)="ClosePassword()">close</ion-button>
-    </ion-buttons>
-    <ion-buttons slot="primary">
-      <ion-button (click)="SavePassword()">done</ion-button>
-    </ion-buttons>
+    </ion-buttons> -->
+    <!-- <ion-buttons slot="primary">
+      <ion-button (click)="SavePassword()" color="hk-red">done</ion-button>
+    </ion-buttons> -->
+    <ion-button slot="start" (click)="ClosePassword()" color="hk-red" size="small" mode="ios">close
+    </ion-button>
+    <ion-button slot="primary" (click)="SavePassword()" color="{{colorButton}}" size="small" mode="ios">done
+    </ion-button>
     <ion-title style="text-align: center;">Update Password</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,7 +17,10 @@
 <ion-content color="hk-tweet">
   <ion-item Lines="full">
     <ion-label>Current password</ion-label>
-    <ion-input (ionChange)="OnChangeCurrentPassword()" [(ngModel)]="currentPassword" name="currentPassword"></ion-input>
+    <ion-input (ionChange)="OnChangeCurrentPassword()" [(ngModel)]="currentPassword" name="currentPassword" type="password"></ion-input>
+    <!-- <ion-button slot="end" fill="clear" color="hk-purple" mode="ios">
+      <ion-icon name="eye" slot="end" size="large"></ion-icon>
+    </ion-button> -->
   </ion-item>
 
   <hr style="height: 12px; background-color: var(--ion-color-hk-tweet); margin-top: 0px; margin-bottom: 0px;"
@@ -22,11 +29,17 @@
 
   <ion-item Lines="inset">
     <ion-label>New password</ion-label>
-    <ion-input (ionChange)="OnChangeNewPassword()" [(ngModel)]="newPassword" name="newPassword"></ion-input>
+    <ion-input (ionChange)="OnChangeNewPassword()" [(ngModel)]="newPassword" name="newPassword" type="password"></ion-input>
+    <!-- <ion-button slot="end" fill="clear" color="hk-purple" mode="ios">
+      <ion-icon name="eye" slot="end" size="large"></ion-icon>
+    </ion-button> -->
   </ion-item>
 
   <ion-item Lines="full">
     <ion-label>Confirm password</ion-label>
-    <ion-input (ionChange)="OnConfirmNewPassword()" [(ngModel)]="confirmPassword" name="confirmPassword"></ion-input>
+    <ion-input (ionChange)="OnConfirmNewPassword()" [(ngModel)]="confirmPassword" name="confirmPassword" type="password"></ion-input>
+    <!-- <ion-button slot="end" fill="clear" color="hk-purple" mode="ios">
+      <ion-icon name="eye-off" slot="end" size="large"></ion-icon>
+    </ion-button> -->
   </ion-item>
 </ion-content>
