- Fix sistem absen - Welcome page - Modify attendance page

--- a/src/app/pages/attendance/attendance.page.html
+++ b/src/app/pages/attendance/attendance.page.html
@@ -17,3 +17,14 @@
   <app-report-daily2></app-report-daily2>
 
 </ion-content>
+
+<ion-footer no-shadow no-border>
+  <ion-card>
+    <ion-item color="hk-yellow">
+      <ion-icon name="warning" slot="start"></ion-icon>
+      <ion-label class="ion-text-wrap">
+        <p>Silahkan cek melalui aplikasi SAP untuk mengetahui data valid kehadiran</p>
+      </ion-label>
+    </ion-item>
+  </ion-card>
+</ion-footer>
