- Fix attendance page - Modify home page remove back gesture form home for ios

--- a/src/app/pages/attendance/attendance.page.scss
+++ b/src/app/pages/attendance/attendance.page.scss
@@ -1,5 +1,5 @@
 .content {
-    --background: none;
+    // --background: none;
     // background-image: url("../../../assets/images/bg-5.png");
     background-position: center top;
     background-repeat: no-repeat;
