- Fix no gesture back from home page - Rename SAP/SF to HITS - Modify window.open() to InAppBrowser

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,6 +7,8 @@
   </ion-toolbar>
 </ion-header> -->
 
+<!-- <ion-view can-swipe-back="false"></ion-view> -->
+
 <ion-content fullscreen="true">
   <!-- scroll-y=false -->
   <!-- <ion-toolbar color="transparent">
