--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -4,7 +4,7 @@
       <ion-row>
         <div class="text" padding>
           <h2>HK ABSEN</h2>
-          <p>Hutama Karya Presence System</p>
+          <p>Hutama Karya Attendance System</p>
         </div>
       </ion-row>
     </ion-slide>
