--- a/src/app/pages/attendance/attendance.page.html
+++ b/src/app/pages/attendance/attendance.page.html
@@ -23,7 +23,7 @@
     <ion-item color="hk-yellow">
       <ion-icon name="warning" slot="start"></ion-icon>
       <ion-label class="ion-text-wrap">
-        <p>Silahkan cek melalui aplikasi SAP untuk mengetahui data valid kehadiran</p>
+        <p>Silahkan cek melalui aplikasi HITS untuk mengetahui data valid kehadiran</p>
       </ion-label>
     </ion-item>
   </ion-card>
