Fix for production

--- a/src/app/components/report-daily/report-daily.component.html
+++ b/src/app/components/report-daily/report-daily.component.html
@@ -8,40 +8,40 @@
 
 <ion-slides #slidesMonth (ionSlideDidChange)="slideMonthChanged()" [options]="slideOpts" style="min-height: 30px">
   <ion-slide>
-    <ion-text style="padding-top: 12px">Januari {{ tahun }}</ion-text>
+    <ion-text style="padding-top: 12px">Januari {{ decCurrentYear }}</ion-text>
   </ion-slide>
   <ion-slide>
-    <ion-text style="padding-top: 12px">Februari {{ tahun }}</ion-text>
+    <ion-text style="padding-top: 12px">Februari {{ decCurrentYear }}</ion-text>
   </ion-slide>
   <ion-slide>
-    <ion-text style="padding-top: 12px">Maret {{ tahun }}</ion-text>
+    <ion-text style="padding-top: 12px">Maret {{ decCurrentYear }}</ion-text>
   </ion-slide>
   <ion-slide>
-    <ion-text style="padding-top: 12px">April {{ tahun }}</ion-text>
+    <ion-text style="padding-top: 12px">April {{ decCurrentYear }}</ion-text>
   </ion-slide>
   <ion-slide>
-    <ion-text style="padding-top: 12px">Mei {{ tahun }}</ion-text>
+    <ion-text style="padding-top: 12px">Mei {{ decCurrentYear }}</ion-text>
   </ion-slide>
   <ion-slide>
-    <ion-text style="padding-top: 12px">Juni {{ tahun }}</ion-text>
+    <ion-text style="padding-top: 12px">Juni {{ decCurrentYear }}</ion-text>
   </ion-slide>
   <ion-slide>
-    <ion-text style="padding-top: 12px">Juli {{ tahun }}</ion-text>
+    <ion-text style="padding-top: 12px">Juli {{ decCurrentYear }}</ion-text>
   </ion-slide>
   <ion-slide>
-    <ion-text style="padding-top: 12px">Agustus {{ tahun }}</ion-text>
+    <ion-text style="padding-top: 12px">Agustus {{ decCurrentYear }}</ion-text>
   </ion-slide>
   <ion-slide>
-    <ion-text style="padding-top: 12px">September {{ tahun }}</ion-text>
+    <ion-text style="padding-top: 12px">September {{ decCurrentYear }}</ion-text>
   </ion-slide>
   <ion-slide>
-    <ion-text style="padding-top: 12px">Oktober {{ tahun }}</ion-text>
+    <ion-text style="padding-top: 12px">Oktober {{ decCurrentYear }}</ion-text>
   </ion-slide>
   <ion-slide>
-    <ion-text style="padding-top: 12px">November {{ tahun }}</ion-text>
+    <ion-text style="padding-top: 12px">November {{ decCurrentYear }}</ion-text>
   </ion-slide>
   <ion-slide>
-    <ion-text style="padding-top: 12px">Desember {{ tahun }}</ion-text>
+    <ion-text style="padding-top: 12px">Desember {{ decCurrentYear }}</ion-text>
   </ion-slide>
 </ion-slides>
 
