--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -51,10 +51,10 @@
     </div>
     <ion-row>
       <ion-col>
-        <ion-button expand="full" color="hk-white-purple" shape="round" (click)="UpdateRequest(requestData.szRequestId, 0)">DECLINE</ion-button>
+        <ion-button expand="full" color="hk-white-purple" shape="round">DECLINE</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button expand="full" color="hk-purple" shape="round" (click)="UpdateRequest(requestData.szRequestId, 1)">APPROVE</ion-button>
+        <ion-button expand="full" color="hk-purple" shape="round">APPROVE</ion-button>
       </ion-col>
     </ion-row>
   </ion-card>
