--- a/src/app/components/popover/popover.component.html
+++ b/src/app/components/popover/popover.component.html
@@ -6,12 +6,12 @@
   <ion-row no-padding>
     <ion-col no-padding>
       <div class="ion-text-start">
-        <ion-button shape="round" expand="block" color="hk-grey" (click)="closePopover()">Cancel</ion-button>
+        <ion-button shape="round" expand="block" color="hk-grey">Cancel</ion-button>
       </div>
     </ion-col>
     <ion-col no-padding>
       <div class="ion-text-end">
-        <ion-button shape="round" expand="block" color="hk-grey" (click)="closePopover()">OK</ion-button>
+        <ion-button shape="round" expand="block" color="hk-grey">OK</ion-button>
       </div>
     </ion-col>
   </ion-row>
