--- a/src/app/components/form-absen-diluar/form-absen-diluar.component.html
+++ b/src/app/components/form-absen-diluar/form-absen-diluar.component.html
@@ -1,4 +1,13 @@
 <ion-card>
+  <ion-item color="hk-yellow">
+    <ion-icon name="warning" slot="start"></ion-icon>
+    <ion-label class="ion-text-wrap">
+      <p>Ketentuan foto : Menggunakan atribut kantor dan memperlihatkan aktifitas kerja.</p>
+    </ion-label>
+  </ion-item>
+</ion-card>
+
+<ion-card>
   <ion-card-header>
     <ion-card-subtitle>Form Absen Diluar</ion-card-subtitle>
   </ion-card-header>
