--- a/src/app/pages/attendance/attendance.page.html
+++ b/src/app/pages/attendance/attendance.page.html
@@ -8,13 +8,112 @@
 </ion-header>
 
 
-<ion-content scrollEvents="true" class="content">
-  <!-- <ion-searchbar showCancelButton="focus" placeholder="Search" color="light" style="width: 90%; margin: 0 auto;"
-    mode="ios">
-  </ion-searchbar> -->
+<ion-content>
+  <ion-button type="submit" float-left fill="clear" color="dark" class="btnPrev" (click)="prev()">
+    <ion-icon name="arrow-back"></ion-icon>
+  </ion-button>
+  <ion-button type="submit" float-right fill="clear" color="dark" class="btnNext" (click)="next()">
+    <ion-icon name="arrow-forward"></ion-icon>
+  </ion-button>
 
-  <app-report-daily></app-report-daily>
-  <app-report-daily2></app-report-daily2>
+  <ion-slides #slidesMonth (ionSlideDidChange)="slideMonthChanged()" [options]="slideOpts" style="min-height: 30px">
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Januari {{ decCurrentYear }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Februari {{ decCurrentYear }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Maret {{ decCurrentYear }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">April {{ decCurrentYear }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Mei {{ decCurrentYear }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Juni {{ decCurrentYear }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Juli {{ decCurrentYear }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Agustus {{ decCurrentYear }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">September {{ decCurrentYear }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Oktober {{ decCurrentYear }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">November {{ decCurrentYear }}</ion-text>
+    </ion-slide>
+    <ion-slide>
+      <ion-text style="padding-top: 12px">Desember {{ decCurrentYear }}</ion-text>
+    </ion-slide>
+  </ion-slides>
+
+  <div class="container">
+    <div class="scroll" scrollX="true">
+      <span *ngFor="let buttonPropertyData of buttonPropertyDatas">
+        <ion-button shape="round" size="small" fill="{{ buttonPropertyData.fill }}"
+          color="{{ buttonPropertyData.color }}" (click)="GetDayData(buttonPropertyData.date)">
+          {{ buttonPropertyData.date }}
+        </ion-button>
+      </span>
+    </div>
+  </div>
+
+  <hr width="90%">
+
+  <ion-grid style="width: 90%" no-padding>
+    <ion-row no-padding align-items-center>
+      <ion-col size="2" no-padding style="text-align: left">
+        <ion-icon name="card" style="font-size: 50px; vertical-align: middle" color="hk-red"></ion-icon>
+      </ion-col>
+      <ion-col size="10" style="text-align: left; font-size: 16px">
+        <ion-text color="hk-darkgrey">Datang : </ion-text>
+        <ion-text color="dark">{{ txtTimeArrived }}</ion-text>
+        <br>
+        <ion-text color="hk-darkgrey">Pulang : </ion-text>
+        <ion-text color="dark">{{ txtTimeReturn }}</ion-text>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <hr width="90%">
+
+  <!-- <ion-card>
+    <div class="ion-text-start" padding style="padding-top: 0px">
+      <ion-text> <br /> <img src="{{ photo }}" class="center" /></ion-text>
+    </div>
+  </ion-card>
+
+  <hr width="90%">
+
+  <ion-card>
+    <div class="ion-text-start" padding style="padding-top: 0px">
+      <img src="{{ photo }}" class="center" />
+    </div>
+  </ion-card>
+
+  <hr width="90%"> -->
+
+  <ion-card class="ion-text-center" *ngIf="isArrived">
+    <img src="{{ photoArrived }}" class="center" />
+    <div padding>
+      <ion-text style="font-weight: 700;">Absen Datang Diluar Kantor</ion-text>
+    </div>
+  </ion-card>
+
+  <ion-card class="ion-text-center" *ngIf="isReturn">
+    <img src="{{ photoReturn }}" class="center" />
+    <div padding>
+      <ion-text style="font-weight: 700;">Absen Pulang Diluar Kantor</ion-text>
+    </div>
+  </ion-card>
 
 </ion-content>
 
@@ -23,7 +122,7 @@
     <ion-item color="hk-yellow">
       <ion-icon name="warning" slot="start"></ion-icon>
       <ion-label class="ion-text-wrap">
-        <p>Silahkan cek melalui aplikasi HITS untuk mengetahui data valid kehadiran</p>
+        <p>Silahkan cek melalui aplikasi HITS untuk me-review dan memvalidasi data kehadiran</p>
       </ion-label>
     </ion-item>
   </ion-card>
