--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -91,7 +91,7 @@
       </ion-col>
       <ion-col button (click)="NavRouterMenu(2)" class="ion-text-center" size="3">
         <img src="../../assets/images/img-2.png">
-        <ion-text style="font-size: 12px;" color="hk-red">Work Permit</ion-text>
+        <ion-text style="font-size: 12px;" color="hk-red">Time Sheet</ion-text>
       </ion-col>
       <ion-col button (click)="NavRouterMenu(3)" class="ion-text-center" size="3">
         <img src="../../assets/images/img-3.png">
