--- a/src/app/pages/work-permit/work-permit.page.html
+++ b/src/app/pages/work-permit/work-permit.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button color="hk-white-red"></ion-back-button>
     </ion-buttons>
-    <ion-title #label>Leaves</ion-title>
+    <ion-title #label>Time Sheet</ion-title>
     <!-- style="visibility: hidden;" -->
   </ion-toolbar>
 </ion-header>
